# JerryscanAI

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  model_inference.py  model_inference_standalone_script.py  normal.yaml  pyproject.toml
.github/workflows/: deploy.yml
backend/: config.json  main.py  requirements.txt
backend/inference/: alerts.py  config.py  core.py  history.py  manager.py
cli_predictions/: cli_prediction_commands
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  History.css  Inspection.css  constants.js  index.css
frontend/src/components/: AlertsManager.jsx  AngleSelector.jsx  HistoryDashboard.jsx  ImageViewport.jsx  InspectionConsole.jsx  Navbar.jsx
frontend/src/services/: api.js
model_lab/: app.py  data_loader.py  metrics_calculator.py
models/Padim_v0_old/: .gitkeep
scripts/: migrate_json_to_sqlite.py
standalone_scripts/: model_inference_standalone_script.py
test_images/sample1/: .gitkeep
