[project]
name = "jerryscanai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [

    "uvicorn>=0.41.0",
]

[project.optional-dependencies]
lab = [
    "streamlit>=1.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
